# facework

./: .gitignore  LICENSE  README.md  full_requirements.txt  pyproject.toml
examples/: example_FaceCrop.py  example_FaceMorph.py
facework/: FaceCrop.py  FaceMorph.py  __init__.py
