[project]
name = "facework"
version = "0.1.0"
description = "A Python library for face cropping and face morphing"
readme = "README.md"
requires-python = ">=3.10.11"
license = {text = "MIT"}
authors = [
  { name = "Gioele Angelo Crespi", email = "crespigioeleangelo@email.com" }
]
keywords = ["face", "morph", "crop", "image-processing", "computer-vision", "landmark-detection"]

dependencies = [
  "absl-py==2.2.0",
  "attrs==25.3.0",
  "cffi==1.17.1",
  "contourpy==1.3.1",
  "cycler==0.12.1",
  "ffmpeg-python==0.2.0",
  "flatbuffers==25.2.10",
  "fonttools==4.56.0",
  "future==1.0.0",
  "jax==0.5.3",
  "jaxlib==0.5.3",
  "kiwisolver==1.4.8",
  "matplotlib==3.10.1",
  "mediapipe==0.10.21",
  "ml_dtypes==0.5.1",
  "numpy==1.26.4",
  "opencv-contrib-python==4.11.0.86",
  "opencv-python==4.11.0.86",
  "opt_einsum==3.4.0",
  "packaging==24.2",
  "pandas==2.2.3",
  "pillow==11.1.0",
  "protobuf==4.25.6",
  "psutil==7.0.0",
  "psutils==3.3.9",
  "puremagic==1.28",
  "pycparser==2.22",
  "pyee==13.0.0",
  "pyparsing==3.2.1",
  "pypdf==5.4.0",
  "python-dateutil==2.9.0.post0",
  "pytz==2025.1",
  "scipy==1.15.2",
  "sentencepiece==0.2.0",
  "six==1.17.0",
  "sounddevice==0.5.1",
  "typing_extensions==4.12.2",
  "tzdata==2025.2",
  "Wand==0.6.13"
]

[project.urls]
Homepage = "https://github.com/gngcr/FaceWork"
Repository = "https://github.com/gngcr/FaceWork"

[build-system]
requires = ["setuptools>=65.5", "wheel"]
build-backend = "setuptools.build_meta"
